# silverutil

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: silverdb.ksy  silverdb_format.md
src/: database.rs  format.rs  lib.rs  little_helper.rs  main.rs  marshal.rs  section_content.rs  section_types.rs  sections.rs  silver_error.rs
src/bitmap/: format.rs  image.rs  mod.rs
src/cli/: Cargo.toml
src/cli/src/: main.rs  marshal.rs  scrape.rs
