[package]
name = "silverlib"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["png"]}
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"

[workspace]
members = ["src/cli"]
# When using `cargo run`, we'd prefer silverutil itself to be executed.
default-members = ["src/cli"]